--- a/menuH/index.html
+++ b/menuH/index.html
@@ -27,7 +27,7 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
-        <div class="coteudo">
+        <div class="conteudo">
 
 
             <table class="table table-striped table-primary table-hover">
